# bc-compbio

./: .pre-commit-config.yaml  Makefile  README.md  conda-lock.yml  environment.yml  mkdocs.yml  pyproject.toml
docs/: .pages
docs/about/: .pages  modeling-philosophy.md  programming-langs.md
docs/about/compbio/: index.md
docs/universities/: .pages  index.md
docs/universities/brown/: index.md
docs/universities/brown/degrees/: index.md
docs/universities/buffalo/: index.md
docs/universities/buffalo/degrees/: index.md
docs/universities/cmu/: .pages  index.md
docs/universities/cmu/degrees/: index.md
docs/universities/fsu/: index.md
docs/universities/fsu/degrees/: index.md
docs/universities/harvard/: index.md
docs/universities/harvard/degrees/: index.md
docs/universities/jhu/: index.md
docs/universities/jhu/degrees/: index.md
docs/universities/mit/: index.md
docs/universities/mit/degrees/: index.md
docs/universities/penn/: index.md
docs/universities/penn/degrees/: index.md
docs/universities/pitt/: index.md
docs/universities/pitt/degrees/: index.md
docs/universities/princeton/: index.md
docs/universities/princeton/degrees/: index.md
docs/universities/rochester/: index.md
docs/universities/rochester/degrees/: index.md
docs/universities/rpi/: index.md
docs/universities/rpi/degrees/: index.md
docs/universities/umbc/: index.md
docs/universities/umbc/degrees/: index.md
docs/universities/usc/: index.md
docs/universities/usc/degrees/: index.md
