[tool.poetry]
name = "compbio-bc"
version = "0.0.0"
description = "Computational Biology Breadcrumbs"
authors = [
    "OASCI <us@oasci.org>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.7"
mkdocs-awesome-pages-plugin = "^2.9.2"
material-plausible-plugin = "^0.2.0"
pymdown-extensions = "^10.3.1"
mkdocs-table-reader-plugin = "^2.0.3"
mkdocstrings = "^0.23.0"
mkdocstrings-python = "^1.7.3"
mkdocs-jupyter = "^0.24.6"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
isort = "^5.12.0"
pylint = "^3.0.1"
mypy = "^1.6.0"
mypy-extensions = "^1.0.0"
bump-my-version = "^0.11.0"

[tool.bumpversion]
current_version = "2023.10.29"
tag = true
commit = true

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
format-jinja = "{%- if distance == 0 -%}{{ serialize_pep440(base) }}{%- else -%}{{ serialize_pep440(base, post=distance) }}{%- endif -%}"

[tool.poetry-dynamic-versioning.substitution]
patterns = [
    "(^__version__\\s*(?::.*?)?=\\s*['\"])[^'\"]*(['\"])",
]
folders = [
    { path = "python-bc" },
]

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning>=1.0.0,<2.0.0",
]
build-backend = "poetry_dynamic_versioning.backend"

["tool.poetry.group.conda.dependencies"]
appdirs = "^1.4.4"
Brotli = "^1.1.0"
build = "^1.0.3"
CacheControl = "^0.13.1"
cachy = "^0.3.0"
certifi = "^2023.11.17"
cffi = "^1.16.0"
cfgv = "^3.3.1"
charset-normalizer = "^3.3.2"
cleo = "^2.1.0"
click = "^8.1.7"
click-default-group = "^1.2.4"
clikit = "^0.6.2"
colorama = "^0.4.6"
conda_lock = "^2.5.2"
conda_poetry_liaison = "^0.1.2"
crashtest = "^0.4.1"
cryptography = "^42.0.1"
distlib = "^0.3.8"
dulwich = "^0.21.7"
ensureconda = "^1.4.3"
fastjsonschema = "^2.19.1"
filelock = "^3.13.1"
gitdb = "^4.0.11"
GitPython = "^3.1.41"
html5lib = "^1.1"
identify = "^2.5.33"
idna = "^3.6"
importlib-metadata = "^7.0.1"
installer = "^0.7.0"
"jaraco.classes" = "^3.3.0"
jeepney = "^0.8.0"
Jinja2 = "^3.1.3"
keyring = "^24.3.0"
MarkupSafe = "^2.1.4"
more-itertools = "^10.2.0"
msgpack = "^1.0.7"
nodeenv = "^1.8.0"
numpy = "^1.26.3"
packaging = "^23.2"
pastel = "^0.2.1"
pexpect = "^4.9.0"
pip = "^23.3.2"
pkginfo = "^1.9.6"
platformdirs = "^3.11.0"
poetry = "^1.7.1"
poetry-core = "^1.8.1"
poetry-plugin-export = "^1.6.0"
pre-commit = "^3.6.0"
ptyprocess = "^0.7.0"
pycparser = "^2.21"
pydantic = "^2.5.3"
pydantic_core = "^2.14.6"
pylev = "^1.4.0"
pyproject_hooks = "^1.0.0"
PySocks = "^1.7.1"
PyYAML = "^6.0.1"
rapidfuzz = "^3.6.1"
requests = "^2.31.0"
requests-toolbelt = "^1.0.0"
"ruamel.yaml" = "^0.18.5"
"ruamel.yaml.clib" = "^0.2.7"
SecretStorage = "^3.3.3"
setuptools = "^69.0.3"
shellingham = "^1.5.4"
six = "^1.16.0"
smmap = "^5.0.0"
tomli = "^2.0.1"
tomli_w = "^1.0.0"
tomlkit = "^0.12.3"
toolz = "^0.12.1"
trove-classifiers = "^2024.1.8"
typing_extensions = "^4.9.0"
ukkonen = "^1.0.1"
urllib3 = "^1.26.18"
virtualenv = "^20.25.0"
webencodings = "^0.5.1"
wheel = "^0.42.0"
zipp = "^3.17.0"
