[tool.poetry]
name = "compbio-bc"
version = "0.0.0"
description = "Computational Biology Breadcrumbs"
authors = [
    "OASCI <us@oasci.org>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.7"
material-plausible-plugin = "^0.2.0"
pymdown-extensions = "^10.3.1"
mkdocs-table-reader-plugin = "^2.0.3"
mkdocstrings = "^0.23.0"
mkdocstrings-python = "^1.7.3"
mkdocs-awesome-pages-plugin = "^2.9.2"
mkdocs-macros-plugin = "^1.0.5"
mkdocs-print-site-plugin = "^2.3.6"
mkdocs-glightbox = "^0.3.5"
gradescope-utils = "^0.5.0"
mkdocs-git-revision-date-localized-plugin = "^1.2.6"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
isort = "^5.12.0"
pylint = "^3.0.1"
mypy = "^1.6.0"
mypy-extensions = "^1.0.0"
bump-my-version = "^0.11.0"

[tool.bumpversion]
current_version = "2023.10.29"
tag = true
commit = true

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
format-jinja = "{%- if distance == 0 -%}{{ serialize_pep440(base) }}{%- else -%}{{ serialize_pep440(base, post=distance) }}{%- endif -%}"

[tool.poetry-dynamic-versioning.substitution]
patterns = [
    "(^__version__\\s*(?::.*?)?=\\s*['\"])[^'\"]*(['\"])",
]
folders = [
    { path = "python-bc" },
]

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning>=1.0.0,<2.0.0",
]
build-backend = "poetry_dynamic_versioning.backend"

["tool.poetry.group.conda.dependencies"]
appdirs = "^1.4.4"
Brotli = "^1.0.9"
build = "^1.2.1"
CacheControl = "^0.14.0"
cachy = "^0.3.0"
certifi = "^2024.7.4"
cffi = "^1.16.0"
cfgv = "^3.4.0"
charset-normalizer = "^3.3.2"
cleo = "^2.1.0"
click = "^8.1.7"
click-default-group = "^1.2.2"
clikit = "^0.6.2"
colorama = "^0.4.6"
conda_lock = "^2.5.6"
conda_poetry_liaison = "^0.1.2"
crashtest = "^0.4.1"
cryptography = "^42.0.5"
distlib = "^0.3.8"
dulwich = "^0.21.3"
ensureconda = "^1.4.4"
fastjsonschema = "^2.20.0"
filelock = "^3.13.1"
gitdb = "^4.0.7"
GitPython = "^3.1.43"
html5lib = "^1.1"
identify = "^2.5.5"
idna = "^3.7"
importlib-metadata = "^7.0.1"
installer = "^0.7.0"
"jaraco.classes" = "^3.2.1"
jeepney = "^0.7.1"
Jinja2 = "^3.1.4"
keyring = "^24.3.1"
MarkupSafe = "^2.1.3"
more-itertools = "^10.1.0"
msgpack = "^1.0.3"
nodeenv = "^1.7.0"
numpy = "^1.26.4"
packaging = "^24.1"
pastel = "^0.2.1"
pexpect = "^4.8.0"
pip = "^24.2"
pkginfo = "^1.10.0"
platformdirs = "^3.10.0"
poetry = "^1.8.3"
poetry-core = "^1.9.0"
poetry-plugin-export = "^1.8.0"
pre_commit = "^3.8.0"
ptyprocess = "^0.7.0"
pycparser = "^2.21"
pydantic = "^2.5.3"
pydantic_core = "^2.14.6"
pylev = "^1.3.0"
pyOpenSSL = "^24.0.0"
pyproject_hooks = "^1.0.0"
PySocks = "^1.7.1"
PyYAML = "^6.0.1"
rapidfuzz = "^3.5.2"
requests = "^2.32.3"
requests-toolbelt = "^1.0.0"
"ruamel.yaml" = "^0.17.21"
SecretStorage = "^3.3.1"
setuptools = "^72.1.0"
shellingham = "^1.5.0"
six = "^1.16.0"
smmap = "^4.0.0"
tomli = "^2.0.1"
tomli_w = "^1.0.0"
tomlkit = "^0.13.0"
toolz = "^0.12.0"
trove-classifiers = "^2023.10.18"
typing_extensions = "^4.11.0"
ukkonen = "^1.0.1"
urllib3 = "^1.26.19"
virtualenv = "^20.26.1"
webencodings = "^0.5.1"
wheel = "^0.44.0"
zipp = "^3.17.0"
